# Discourse2Draft

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.html  README.md  agent_f59bcd40-c4dd-4614-819a-25bf95dd6ada.json  app.py  app_backend.py  app_defaults.py  app_login.py  app_main.py  app_settings.py  db.py  docker-compose.yml  example.env  google_auth.json  main.py  pyproject.toml  requirements.txt  utils.py  workers.py
authentication_modules/: create_account.py  login.py
css/: custom.css  custom.scss
docs/: README copy.md  README.md
docs/manuscript/: figures.pptx  ~$figures.pptx
js/: addon.js
notebooks/: evaluate.ipynb  test.ipynb
src/: architecture.py  generate_report.py  llms.py  prompts.py  summarize.py  utils.py
src/backend/: add_citations.py  analyze_query.py  architecture.py  db.py  gather_context.py  generate_content.py  generate_content_rag.py  generate_outline.py  llms.py  summarize.py  utils.py  vectordb.py
src/backend/ai/: add_citations.py  add_literature.py  analyze_content_header.py  architecture.py  common.py  detect_abstract_section.py  format_outline.py  gather_context.py  gather_context_graph.py  generate_content.py  generate_content_graphrag.py  generate_content_rag.py  generate_outline.py  llms.py  prompts.py  summarize.py  utils.py  write_abstract.py
src/backend/ai/tools/: search_pubmed.py
src/frontend/: about.py  common.py  concept_map.py  contents.py  db.py  defaults.py  main.py  manage_outline.py  settings.py
src/frontend/authentication_modules/: authentication.py  create_account.py  forgot_password.py  login.py  utils.py
src/frontend/sidebar_modules/: generated_docs.py  sidebar.py  uploaded_docs.py
www/css/: custom.css  custom.scss
www/js/: addon.js  auth.js  concept_map_graph.js
