[project]
name = "word-processor-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "chromadb>=1.0.12",
    "faicons>=0.2.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.56",
    "langchain-openai>=0.3.14",
    "langchain-unstructured>=0.1.6",
    "langgraph>=0.3.34",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "shiny>=1.4.0",
    "shinywidgets>=0.5.2",
    "unstructured[docx]>=0.17.2",
]
