[project]
name = "word-processor-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "certifi>=2025.4.26",
    "faicons>=0.2.2",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-chroma==0.2.3",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.56",
    "langchain-experimental>=0.3.4",
    "langchain-graph-retriever[chroma]>=0.8.0",
    "langchain-openai>=0.3.14",
    "langchain-unstructured>=0.1.6",
    "langgraph>=0.3.34",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pyvis>=0.3.2",
    "rich>=14.0.0",
    "shiny>=1.4.0",
    "shinywidgets>=0.5.2",
    "truststore>=0.10.1",
    "unstructured[docx]>=0.17.2",
]
